{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 380,
  "lineage": "04cc9667-2ff4-d321-b8b3-ea09b822eaf1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01bcddb806679dbdc",
            "arn": "arn:aws:ec2:ap-south-1:873925794571:elastic-ip/eipalloc-01bcddb806679dbdc",
            "association_id": "eipassoc-03b7a4f0a095f606d",
            "domain": "vpc",
            "id": "eipalloc-01bcddb806679dbdc",
            "instance": "i-0b17cd1786324e4bc",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0357db63402222930",
            "private_dns": "ip-10-0-1-208.ap-south-1.compute.internal",
            "private_ip": "10.0.1.208",
            "public_dns": "ec2-13-204-240-142.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.204.240.142",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.my_instance",
            "aws_security_group.allow_ssh_http",
            "aws_subnet.public_subnet",
            "aws_vpc.my_vpc",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0eb5549427fc55d57",
            "arn": "arn:aws:ec2:ap-south-1:873925794571:instance/i-0b17cd1786324e4bc",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b17cd1786324e4bc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my_mini_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0357db63402222930"
              }
            ],
            "primary_network_interface_id": "eni-0357db63402222930",
            "private_dns": "ip-10-0-1-208.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.208",
            "public_ip": "13.233.96.26",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ab5f6c1fa7e9cec6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02eb3b143c13b3486",
            "tags": {
              "Name": "MyWebServer_1",
              "company": "MyCompany"
            },
            "tags_all": {
              "Name": "MyWebServer_1",
              "company": "MyCompany"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06c2c12defce11417"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "873925794571",
            "id": "i-0b17cd1786324e4bc",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.allow_ssh_http",
            "aws_subnet.public_subnet",
            "aws_vpc.my_vpc",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0eb5549427fc55d57",
            "arn": "arn:aws:ec2:ap-south-1:873925794571:instance/i-0efa552d1c9a922d4",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0efa552d1c9a922d4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my_mini_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e7da06c069fb5f72"
              }
            ],
            "primary_network_interface_id": "eni-0e7da06c069fb5f72",
            "private_dns": "ip-10-0-1-190.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.190",
            "public_ip": "3.109.200.106",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-008804931d4950745",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02eb3b143c13b3486",
            "tags": {
              "Name": "MyWebServer_2",
              "company": "MyCompany"
            },
            "tags_all": {
              "Name": "MyWebServer_2",
              "company": "MyCompany"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0607b4b57e7fe9ede"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "873925794571",
            "id": "i-0efa552d1c9a922d4",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.my_vpc",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:873925794571:internet-gateway/igw-080bd15d5b8f791ae",
            "id": "igw-080bd15d5b8f791ae",
            "owner_id": "873925794571",
            "region": "ap-south-1",
            "tags": {
              "Name": "my_internet_gateway1 to public_subnet1"
            },
            "tags_all": {
              "Name": "my_internet_gateway1 to public_subnet1"
            },
            "vpc_id": "vpc-078e54379fb547f0e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "bar",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:873925794571:route-table/rtb-0531f2922bc082b67",
            "id": "rtb-0531f2922bc082b67",
            "owner_id": "873925794571",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-080bd15d5b8f791ae",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example"
            },
            "tags_all": {
              "Name": "example"
            },
            "timeouts": null,
            "vpc_id": "vpc-078e54379fb547f0e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "873925794571",
            "id": "rtb-0531f2922bc082b67",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a53a6e532bf2fef0",
            "region": "ap-south-1",
            "route_table_id": "rtb-0531f2922bc082b67",
            "subnet_id": "subnet-02eb3b143c13b3486"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.bar",
            "aws_subnet.public_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:873925794571:security-group/sg-0525eacb6792f8ab9",
            "description": "Allow MySQL access from subnet 10.0.1.0/24",
            "egress": [],
            "id": "sg-0525eacb6792f8ab9",
            "ingress": [],
            "name": "allow_mysql",
            "name_prefix": "",
            "owner_id": "873925794571",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_mysql"
            },
            "tags_all": {
              "Name": "allow_mysql"
            },
            "timeouts": null,
            "vpc_id": "vpc-078e54379fb547f0e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "873925794571",
            "id": "sg-0525eacb6792f8ab9",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:873925794571:security-group/sg-06c2c12defce11417",
            "description": "Allow traffic through ssh and http",
            "egress": [],
            "id": "sg-06c2c12defce11417",
            "ingress": [],
            "name": "allow_ssh_http",
            "name_prefix": "",
            "owner_id": "873925794571",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_http"
            },
            "tags_all": {
              "Name": "allow_ssh_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-078e54379fb547f0e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "873925794571",
            "id": "sg-06c2c12defce11417",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:873925794571:subnet/subnet-0003c56fa2c81ef2f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0003c56fa2c81ef2f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "873925794571",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "storage1"
            },
            "tags_all": {
              "Name": "storage1"
            },
            "vpc_id": "vpc-078e54379fb547f0e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "873925794571",
            "id": "subnet-0003c56fa2c81ef2f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:873925794571:subnet/subnet-0f11a1e35f86fbbf9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f11a1e35f86fbbf9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "873925794571",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "storage2"
            },
            "tags_all": {
              "Name": "storage2"
            },
            "vpc_id": "vpc-078e54379fb547f0e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "873925794571",
            "id": "subnet-0f11a1e35f86fbbf9",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:873925794571:subnet/subnet-02eb3b143c13b3486",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02eb3b143c13b3486",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "873925794571",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "public_subnet1"
            },
            "tags_all": {
              "Name": "public_subnet1"
            },
            "vpc_id": "vpc-078e54379fb547f0e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "873925794571",
            "id": "subnet-02eb3b143c13b3486",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:873925794571:vpc/vpc-078e54379fb547f0e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02dad7c751ea28824",
            "default_route_table_id": "rtb-0d1a51b1ded33fb7d",
            "default_security_group_id": "sg-0607b4b57e7fe9ede",
            "dhcp_options_id": "dopt-0ab567d49dd15999f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-078e54379fb547f0e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d1a51b1ded33fb7d",
            "owner_id": "873925794571",
            "region": "ap-south-1",
            "tags": {
              "Name": "my_vpc1"
            },
            "tags_all": {
              "Name": "my_vpc1"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:873925794571:security-group-rule/sgr-04442c6ba1c75e675",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-04442c6ba1c75e675",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-06c2c12defce11417",
            "security_group_rule_id": "sgr-04442c6ba1c75e675",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "873925794571",
            "id": "sgr-04442c6ba1c75e675",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.allow_ssh_http",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "out_bound_all_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:873925794571:security-group-rule/sgr-034b8fd1ae85a609d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-034b8fd1ae85a609d",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0525eacb6792f8ab9",
            "security_group_rule_id": "sgr-034b8fd1ae85a609d",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "873925794571",
            "id": "sgr-034b8fd1ae85a609d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.allow_rds",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_rds1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:873925794571:security-group-rule/sgr-0a0aeae9caa143627",
            "cidr_ipv4": "10.0.2.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-0a0aeae9caa143627",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0525eacb6792f8ab9",
            "security_group_rule_id": "sgr-0a0aeae9caa143627",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "873925794571",
            "id": "sgr-0a0aeae9caa143627",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.allow_rds",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:873925794571:security-group-rule/sgr-02bac003bb45b3290",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-02bac003bb45b3290",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-06c2c12defce11417",
            "security_group_rule_id": "sgr-02bac003bb45b3290",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "873925794571",
            "id": "sgr-02bac003bb45b3290",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.allow_ssh_http",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_http1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:873925794571:security-group-rule/sgr-00d0710ee79eaf386",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-00d0710ee79eaf386",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-06c2c12defce11417",
            "security_group_rule_id": "sgr-00d0710ee79eaf386",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "873925794571",
            "id": "sgr-00d0710ee79eaf386",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.allow_ssh_http",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_http2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:873925794571:security-group-rule/sgr-0832a9730c9c28875",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0832a9730c9c28875",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-06c2c12defce11417",
            "security_group_rule_id": "sgr-0832a9730c9c28875",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "873925794571",
            "id": "sgr-0832a9730c9c28875",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.allow_ssh_http",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    }
  ]
}